discussion/kv_engine/179400/179400_rev5_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-53052: Update frequencies for all Buckets when unified caching

Change-Id: Ib4554e41206f2c9c6b5f45362c32a54277b54564

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2022-08-31 19:15:47.000000000
Message: 
Uploaded patch set 5.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-08-31 19:34:30.000000000
Message: 
Patch Set 5: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19903/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/server_api.cc:228:9: error: use of undeclared identifier "LOG_CRITICAL_RAW" [clang-diagnostic-error]
        LOG_CRITICAL_RAW("server api freq sat");
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/hash_table.cc:1448:9: error: use of undeclared identifier "EP_LOG_CRITICAL_RAW" [clang-diagnostic-error]
        EP_LOG_CRITICAL_RAW("ht saturated");
        ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19903/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/server_api.cc:228:9:
error: use of undeclared identifier "LOG_CRITICAL_RAW" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19903/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/48834/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [145/161]: test_MB-19687_fixed...2022-08-31T12:31:29.913696-07:00 CRITICAL (default) freq decaying
Unexpected stat: ep_unified_caching from stat group 
Unexpected stat: ep_unified_caching from stat group config
..\kv_engine\engines\ep\tests\ep_testsuite.cc:7820 Test failed: `stats error" (missing stats)
(27 ms) FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/48834/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/41055/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/hash_table.cc:1448:9:
error: use of undeclared identifier "EP_LOG_CRITICAL_RAW"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/41055/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/9698/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [145/161]: test_MB-19687_fixed...2022-08-31T12:28:32.287489-07:00 CRITICAL (default) freq decaying
[2022-08-31T19:28:33.485Z] Unexpected stat: ep_unified_caching from stat group 
[2022-08-31T19:28:33.485Z] Unexpected stat: ep_unified_caching from stat group config
[2022-08-31T19:28:33.485Z] ../kv_engine/engines/ep/tests/ep_testsuite.cc:7820 Test failed: `stats error" (missing stats)
[2022-08-31T19:28:33.485Z] (21 ms) FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/9698/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/21150/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [145/161]: test_MB-19687_fixed...2022-08-31T20:29:02.077493+01:00 CRITICAL (default) freq decaying
[2022-08-31T19:29:04.793Z] Unexpected stat: ep_unified_caching from stat group 
[2022-08-31T19:29:04.793Z] Unexpected stat: ep_unified_caching from stat group config
[2022-08-31T19:29:04.793Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/engines/ep/tests/ep_testsuite.cc:7820 Test failed: `stats error" (missing stats)
[2022-08-31T19:29:04.793Z] (43 ms) FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/21150/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/21857/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [145/161]: test_MB-19687_fixed...2022-08-31T19:21:34.989653+00:00 CRITICAL (default) freq decaying
[2022-08-31T19:21:36.204Z] Unexpected stat: ep_unified_caching from stat group 
[2022-08-31T19:21:36.204Z] Unexpected stat: ep_unified_caching from stat group config
[2022-08-31T19:21:36.204Z] ../kv_engine/engines/ep/tests/ep_testsuite.cc:7820 Test failed: `stats error" (missing stats)
[2022-08-31T19:21:36.204Z] (62 ms) FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/21857/ )

One of more core files found at the end of the build. Data for post-mortem saved to archived_core_dumps.tar.bz2 under "Build Artifacts". ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/21857/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/22209/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [145/161]: test_MB-19687_fixed...2022-08-31T19:22:35.932137+00:00 CRITICAL (default) freq decaying
[2022-08-31T19:22:37.234Z] Unexpected stat: ep_unified_caching from stat group 
[2022-08-31T19:22:37.234Z] Unexpected stat: ep_unified_caching from stat group config
[2022-08-31T19:22:37.234Z] ../kv_engine/engines/ep/tests/ep_testsuite.cc:7820 Test failed: `stats error" (missing stats)
[2022-08-31T19:22:37.234Z] (61 ms) FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/22209/ )

One of more core files found at the end of the build. Data for post-mortem saved to archived_core_dumps.tar.bz2 under "Build Artifacts". ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/22209/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/22950/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [145/161]: test_MB-19687_fixed...2022-08-31T19:23:10.181050+00:00 CRITICAL (default) freq decaying
[2022-08-31T19:23:19.893Z] Unexpected stat: ep_unified_caching from stat group 
[2022-08-31T19:23:19.893Z] Unexpected stat: ep_unified_caching from stat group config
[2022-08-31T19:23:19.893Z] ../kv_engine/engines/ep/tests/ep_testsuite.cc:7820 Test failed: `stats error" (missing stats)
[2022-08-31T19:23:19.893Z] (560 ms) FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/22950/ )

ThreadSanitizer issue: signal-unsafe call inside of a signal (/opt/gcc-10.2.0/lib64/libtsan.so.0+0x33081) in __interceptor_malloc  ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/22950/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/30238/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [145/161]: test_MB-19687_fixed...2022-08-31T19:22:50.936213+00:00 CRITICAL (default) freq decaying
[2022-08-31T19:22:58.485Z] Unexpected stat: ep_unified_caching from stat group 
[2022-08-31T19:22:58.485Z] Unexpected stat: ep_unified_caching from stat group config
[2022-08-31T19:22:58.485Z] ../kv_engine/engines/ep/tests/ep_testsuite.cc:7820 Test failed: `stats error" (missing stats)
[2022-08-31T19:22:58.485Z] (186 ms) FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/30238/ )

One of more core files found at the end of the build. Data for post-mortem saved to archived_core_dumps.tar.bz2 under "Build Artifacts". ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/30238/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/19124/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/9599/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
